--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -8,7 +8,7 @@ body {
 .loginsignup {
     width: 100%;
     height: 100vh;
-    background: url('https://i.pinimg.com/736x/ad/25/14/ad2514868fd590b0dbe4b17d0261591e.jpg') no-repeat center center/cover;
+    background: url(' https://img.freepik.com/free-vector/geometric-gradient-futuristic-background_23-2149116406.jpg?size=626&ext=jpg&ga=GA1.1.2008272138.1722211200&semt=ais_user') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
